syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

message EntityEnvironmentInfo {
	uint32 jsonClimateType = 1;
	uint32 climateAreaId = 2;
}
